# VAMR-Exercises

./: .gitignore  README.md
exercise1/Exercise 1 - Augmented Reality Wireframe Cube/: Distortion.py  data.py  main.py  pointgen.py  transforms.py
exercise2/Exercise 2 - PnP/: data.py  main.py  plot3d.py  pnp.py  transformation.py
exercise3/Exercise 3 - Simple Keypoint Tracker/: .gitignore  corner.py  descriptor.py  main.py  matchdes.py  ptselect.py
exercise4/exercise04/: Sift.py  data.py  main.py
exercise4/exercise04/sift/: CMakeLists.txt  Sift.cpp  Sift.hpp  Utils.cpp  Utils.hpp  main.cpp
exercise5/Exercise 5 - Stereo Dense Reconstruction/stereo/: CMakeLists.txt  Points.hpp  Stereo.cpp  Stereo.hpp  Timer.hpp  main.cpp
exercise6/Exercise 6 - Two-view Geometry/: 8_point.py  PoseEstimation.py  sfm.py  tri_test.py
exercise6/Exercise 6 - Two-view Geometry/code/8point/: distPoint2EpipolarLine.m
exercise6/Exercise 6 - Two-view Geometry/triangulation/: 8_point_test.cpp  CMakeLists.txt  Points.hpp  Random.hpp  Stereo.hpp  Timer.hpp  Triangulate.cpp  Triangulate.hpp  main.cpp  triangualte_test.cpp
exercise8/Exercise 8 - Lucas-Kanade tracker/: Tracker.py  main.py
exercise9/Exercise 9 - Bundle Adjustment/code/: alignEstimateToGroundTruth.m  main.m  runBA.m
