cmake_minimum_required(VERSION 3.0)
project( stereo )
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
find_package( OpenCV REQUIRED )
find_package (Eigen3 3.3 REQUIRED NO_MODULE)
add_executable( main main.cpp Stereo.cpp)
target_link_libraries( main ${OpenCV_LIBS} )
target_link_libraries (main Eigen3::Eigen)